deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: remstravafrontend 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: remstravafrontend 
    spec:
      containers:
        - name: remstravafrontend 
          image: remstrava.azurecr.io/remstravafrontend:11
          ports:
          - containerPort: 80
