service.yml
apiVersion: v1
kind: Service
metadata:
    name: remstravafrontend
spec:
    type: ClusterIP
    ports:
    - port: 80
    selector:
        app: remstravafrontend
