ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: remstravafrontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: 13.87.164.124.nip.io # IMPORTANT: update <ingress ip> with the dashed public IP of your ingress, for example frontend.13-68-177-68.nip.io
    http:
      paths:
      - backend:
          serviceName: remstravafrontend-web
          servicePort: 80
        path: /
